add data for hash maps

--- a/_notebooks/2023-04-5-sorts.ipynb
+++ b/_notebooks/2023-04-5-sorts.ipynb
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -320,9 +320,9 @@
       "Sorted array:\n",
       "123 132 164 234 323 725 905 \n",
       "\n",
-      "Time taken for one run: 12800 nanoseconds\n",
+      "Time taken for one run: 2900 nanoseconds\n",
       "\n",
-      "Average time taken for 5000 runs: 6057 nanoseconds\n"
+      "Average time taken for 5000 runs: 3533 nanoseconds\n"
      ]
     }
    ],
@@ -438,6 +438,108 @@
     "- compares the elements and merges them into order\n",
     "- then merges others elements all together\n",
     "- fastest of these with a time complexity of O(n log(n)) which is much more efficient than the other sorts"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hash Map vs. Binary Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Look up time: 2400 nanoseconds\n",
+      "Binary search time: 4500 nanoseconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.HashMap;\n",
+    "import java.lang.Integer;\n",
+    "import java.util.Scanner;\n",
+    "\n",
+    "public class Hash {\n",
+    "    public static void main(String[] args){\n",
+    "\n",
+    "        HashMap<Integer, Integer> hashmap = new HashMap<Integer, Integer>();\n",
+    "        int[] list = new int[5000];\n",
+    "\n",
+    "        // Add to the 'hashmap' and 'list' with random integer values between 0 and 5000.\n",
+    "        for (int i = 0; i < list.length; i++) {\n",
+    "            Integer value = (int) (Math.random() * 5000);\n",
+    "            hashmap.put(value, value);\n",
+    "            list[i] = value;\n",
+    "        }\n",
+    "\n",
+    "        // Measure the time it takes to look up the key '12' in the 'hashmap' using the 'lookUp' method,\n",
+    "        // and print the time taken in nanoseconds.\n",
+    "        long lookUpTime = (lookUp(hashmap, 12));\n",
+    "        System.out.println(\"Look up time: \" + lookUpTime + \" nanoseconds\");\n",
+    "\n",
+    "        // Measure the time it takes to search for the integer value '12' in the 'list' using a binary search algorithm\n",
+    "        // implemented in the 'binarySearchTime' method, and print the time taken in nanoseconds.\n",
+    "        long binarySearchTime = (binarySearchTime(list, 12));\n",
+    "        System.out.println(\"Binary search time: \" + binarySearchTime + \" nanoseconds\");\n",
+    "        \n",
+    "    }\n",
+    "\n",
+    "    // This method takes a HashMap<Integer, Integer> object and an Integer value as parameters,\n",
+    "    // and measures the time it takes to check if the HashMap contains the given value.\n",
+    "    public static long lookUp(HashMap<Integer, Integer> hashmap, Integer value) {\n",
+    "        long start = System.nanoTime();\n",
+    "        hashmap.containsKey(value); // Check if the HashMap contains the given value.\n",
+    "        long end = System.nanoTime();\n",
+    "        return (end - start); \n",
+    "    }\n",
+    "\n",
+    "    public static long binarySearchTime(int[] list, Integer value) {\n",
+    "        long start = System.nanoTime();\n",
+    "       \n",
+    "        int low = 0; \n",
+    "        int high = list.length - 1; \n",
+    "        int middle = (low + high) / 2; \n",
+    "        while (low <= high) { \n",
+    "            if (list[middle] < value) { // If the middle element is less than the target value:\n",
+    "                low = middle + 1; // Discard the lower half of the array.\n",
+    "            } else if (list[middle] == value) { // If the middle element is equal to the target value:\n",
+    "                break; // The target value has been found.\n",
+    "            } else { // If the middle element is greater than the target value:\n",
+    "                high = middle - 1; // Discard the upper half of the array.\n",
+    "            }\n",
+    "            middle = (low + high) / 2; // Update the middle index to the midpoint of the remaining search space.\n",
+    "        }\n",
+    "        long end = System.nanoTime();\n",
+    "        return (end - start); \n",
+    "    }\n",
+    "}\n",
+    "Hash.main(null);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|                         | Pros                                                         | Cons                                                                                                                 |\n",
+    "|-------------------------|--------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------|\n",
+    "| Hash maps           | O(1) lookup time for key-value pairs (on average)            | Hashing function can sometimes result in collisions, leading to slower lookup times                                 |\n",
+    "|                         | Can handle a large amount of data efficiently                 | Hash maps are not sorted, so sorting or iterating over keys can be slower than in other data structures              |\n",
+    "|                         | Can be used for both read and write operations                | Hash maps can take up more memory than other data structures due to the need for the hash table                      |\n",
+    "|                         | Provides a way to quickly check if a key exists in the map     |                                                                                                                      |\n",
+    "|                         | Can store non-unique keys                                     |                                                                                                                      |\n",
+    "| Binary searches     | O(log n) lookup time, which is faster than linear search      | Binary searches require that the data be sorted, which can take time to do if the data changes frequently             |\n",
+    "|                         | Can be used on sorted arrays or lists                         | Binary searches are not efficient for insertions and deletions, since the entire array may need to be shifted       |\n",
+    "|                         | Can be used to find the nearest value to a given value         | Binary searches do not work well with non-unique values, since they only return the index of the first occurrence |\n",
+    "|                         | Can be used to find ranges of values that meet a certain condition |                                                                                                                  |"
    ]
   }
  ],
