pros and cons list

--- a/_notebooks/2023-04-5-sorts.ipynb
+++ b/_notebooks/2023-04-5-sorts.ipynb
@@ -531,11 +531,10 @@
    "source": [
     "|                         | Pros                                                         | Cons                                                                                                                 |\n",
     "|-------------------------|--------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------|\n",
-    "| Hash maps           | O(1) lookup time for key-value pairs (on average)            | Hashing function can sometimes result in collisions, leading to slower lookup times                                 |\n",
+    "| Hash maps           | O(1) lookup time for key-value pairs (on average)            | Can result in collisions, leading to slower lookup times                                 |\n",
     "|                         | Can handle a large amount of data efficiently                 | Hash maps are not sorted, so sorting or iterating over keys can be slower than in other data structures              |\n",
     "|                         | Can be used for both read and write operations                | Hash maps can take up more memory than other data structures due to the need for the hash table                      |\n",
-    "|                         | Provides a way to quickly check if a key exists in the map     |                                                                                                                      |\n",
-    "|                         | Can store non-unique keys                                     |                                                                                                                      |\n",
+    "|\n",
     "| Binary searches     | O(log n) lookup time, which is faster than linear search      | Binary searches require that the data be sorted, which can take time to do if the data changes frequently             |\n",
     "|                         | Can be used on sorted arrays or lists                         | Binary searches are not efficient for insertions and deletions, since the entire array may need to be shifted       |\n",
     "|                         | Can be used to find the nearest value to a given value         | Binary searches do not work well with non-unique values, since they only return the index of the first occurrence |\n",
