--- a/_notebooks/2023-04-5-sorts.ipynb
+++ b/_notebooks/2023-04-5-sorts.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -31,11 +31,9 @@
      "output_type": "stream",
      "text": [
       "Sorted array:\n",
-      "2 34 35 53 57 61 92 \n",
-      "\n",
-      "Time taken for one run: 2800 nanoseconds\n",
-      "\n",
-      "Average time taken for 5000 runs: 1599 nanoseconds\n"
+      "2 3 3 4 4 4 7 34 34 34 35 35 45 53 53 57 61 87 92 345 535 886 4467 24345 34545 \n",
+      "Time taken for one run: 6700 nanoseconds\n",
+      "Average time taken for 5000 runs: 3800 nanoseconds\n"
      ]
     }
    ],
@@ -61,7 +59,7 @@
     "\n",
     "    public static void main(String[] args) {\n",
     "        // create an array of integers\n",
-    "        int[] arr = {34, 57, 35, 92, 2, 61, 53};\n",
+    "        int[] arr = {34, 57, 35, 92, 2, 61, 53, 4, 24345, 345, 34, 4, 53, 34, 886, 4, 3, 535, 45, 34545, 7, 3, 35, 87, 4467};\n",
     "        // sort the array using the bubbleSort function\n",
     "        bubbleSort(arr);\n",
     "\n",
@@ -89,9 +87,9 @@
     "\n",
     "        System.out.println(\"\");\n",
     "\n",
-    "        System.out.println(\"\\nTime taken for one run: \" + duration + \" nanoseconds\");\n",
+    "        System.out.println(\"Time taken for one run: \" + duration + \" nanoseconds\");\n",
     "        \n",
-    "        System.out.println(\"\\nAverage time taken for 5000 runs: \" + avgTime + \" nanoseconds\");\n",
+    "        System.out.println(\"Average time taken for 5000 runs: \" + avgTime + \" nanoseconds\");\n",
     "    }\n",
     "}\n",
     "\n",
@@ -120,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -128,11 +126,9 @@
      "output_type": "stream",
      "text": [
       "Sorted array:\n",
-      "2 10 11 12 46 90 134 \n",
-      "\n",
-      "Time taken for one run: 2900 nanoseconds\n",
-      "\n",
-      "Average time taken for 5000 runs: 1566 nanoseconds\n"
+      "2 4 10 11 12 35 46 54 67 90 134 325 354 434 532 653 896 899 4579 \n",
+      "Time taken for one run: 4100 nanoseconds\n",
+      "Average time taken for 5000 runs: 3543 nanoseconds\n"
      ]
     }
    ],
@@ -159,7 +155,7 @@
     "\n",
     "    public static void main(String[] args) {\n",
     "        // create an array of integers\n",
-    "        int[] arr = {46,134, 10, 12, 2, 11, 90};\n",
+    "        int[] arr = {46,134, 10, 12, 2, 11, 90,354,325,67,532,899,653,4579,896,4,434,54,35};\n",
     "        // sort the array using the selectionSort function\n",
     "        selectionSort(arr);\n",
     "\n",
@@ -186,9 +182,9 @@
     "\n",
     "        System.out.println(\"\");\n",
     "\n",
-    "        System.out.println(\"\\nTime taken for one run: \" + duration + \" nanoseconds\");\n",
+    "        System.out.println(\"Time taken for one run: \" + duration + \" nanoseconds\");\n",
     "        \n",
-    "        System.out.println(\"\\nAverage time taken for 5000 runs: \" + avgTime + \" nanoseconds\");\n",
+    "        System.out.println(\"Average time taken for 5000 runs: \" + avgTime + \" nanoseconds\");\n",
     "    }\n",
     "}\n",
     "\n",
@@ -216,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -224,11 +220,9 @@
      "output_type": "stream",
      "text": [
       "Sorted array:\n",
-      "5 13 30 65 82 304 640 \n",
-      "\n",
-      "Time taken for one run: 2200 nanoseconds\n",
-      "\n",
-      "Average time taken for 5000 runs: 1990 nanoseconds\n"
+      "3 4 5 13 23 30 45 54 56 65 78 82 234 304 323 354 456 640 6754 \n",
+      "Time taken for one run: 3500 nanoseconds\n",
+      "Average time taken for 5000 runs: 3480 nanoseconds\n"
      ]
     }
    ],
@@ -252,7 +246,7 @@
     "\n",
     "    public static void main(String[] args) {\n",
     "        // create an array of integers\n",
-    "        int[] arr = {640, 304, 65, 82, 5, 13, 30};\n",
+    "        int[] arr = {640, 304, 65, 82, 5, 13, 30,234,54,56,3,23,456,78,4,45,323,6754,354};\n",
     "        // sort the array using the insertionSort function\n",
     "        insertionSort(arr);\n",
     "\n",
@@ -279,9 +273,9 @@
     "        \n",
     "        System.out.println(\"\");\n",
     "\n",
-    "        System.out.println(\"\\nTime taken for one run: \" + duration + \" nanoseconds\");\n",
+    "        System.out.println(\"Time taken for one run: \" + duration + \" nanoseconds\");\n",
     "        \n",
-    "        System.out.println(\"\\nAverage time taken for 5000 runs: \" + avgTime + \" nanoseconds\");\n",
+    "        System.out.println(\"Average time taken for 5000 runs: \" + avgTime + \" nanoseconds\");\n",
     "    }\n",
     "}\n",
     "\n",
@@ -310,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -318,11 +312,9 @@
      "output_type": "stream",
      "text": [
       "Sorted array:\n",
-      "123 132 164 234 323 725 905 \n",
-      "\n",
-      "Time taken for one run: 2900 nanoseconds\n",
-      "\n",
-      "Average time taken for 5000 runs: 3533 nanoseconds\n"
+      "12 34 43 123 132 164 234 234 323 466 725 \n",
+      "Time taken for one run: 3900 nanoseconds\n",
+      "Average time taken for 5000 runs: 3379 nanoseconds\n"
      ]
     }
    ],
@@ -389,7 +381,7 @@
     "\n",
     "    public static void main(String[] args) {\n",
     "        // create an array of integers\n",
-    "        int[] arr = {164, 234, 725, 132, 323, 123, 905};\n",
+    "        int[] arr = {164, 234, 725, 132, 323, 123,234,466,43,12,34};\n",
     "        int n = arr.length;\n",
     "\n",
     "        // sort the array using the mergeSort function\n",
@@ -407,7 +399,7 @@
     "        }\n",
     "        \n",
     "        System.out.println(\"\");\n",
-    "        System.out.println(\"\\nTime taken for one run: \" + duration + \" nanoseconds\");\n",
+    "        System.out.println(\"Time taken for one run: \" + duration + \" nanoseconds\");\n",
     "\n",
     "        // measure the time it takes to sort the array using the mergeSort function 5000 times\n",
     "        long totalDuration = 0;\n",
@@ -420,7 +412,7 @@
     "\n",
     "        // calculate the average time it takes to sort the array and print it out\n",
     "        long avgDuration = totalDuration / 5000;\n",
-    "        System.out.println(\"\\nAverage time taken for 5000 runs: \" + avgDuration + \" nanoseconds\");\n",
+    "        System.out.println(\"Average time taken for 5000 runs: \" + avgDuration + \" nanoseconds\");\n",
     "    }\n",
     "}\n",
     "\n",
@@ -450,15 +442,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Look up time: 2400 nanoseconds\n",
-      "Binary search time: 4500 nanoseconds\n"
+      "Hashmap look up time: 4800 nanoseconds\n",
+      "Binary search time: 9000 nanoseconds\n"
      ]
     }
    ],
@@ -483,7 +475,7 @@
     "        // Measure the time it takes to look up the key '12' in the 'hashmap' using the 'lookUp' method,\n",
     "        // and print the time taken in nanoseconds.\n",
     "        long lookUpTime = (lookUp(hashmap, 12));\n",
-    "        System.out.println(\"Look up time: \" + lookUpTime + \" nanoseconds\");\n",
+    "        System.out.println(\"Hashmap look up time: \" + lookUpTime + \" nanoseconds\");\n",
     "\n",
     "        // Measure the time it takes to search for the integer value '12' in the 'list' using a binary search algorithm\n",
     "        // implemented in the 'binarySearchTime' method, and print the time taken in nanoseconds.\n",
