--- a/_notebooks/2023-04-5-sorts.ipynb
+++ b/_notebooks/2023-04-5-sorts.ipynb
@@ -23,8 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "metadata": {},
+   "execution_count": 46,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -32,8 +36,8 @@
      "text": [
       "Sorted array:\n",
       "2 3 3 4 4 4 7 34 34 34 35 35 45 53 53 57 61 87 92 345 535 886 4467 24345 34545 \n",
-      "Time taken for one run: 6700 nanoseconds\n",
-      "Average time taken for 5000 runs: 3800 nanoseconds\n"
+      "Time taken for one run: 3300 nanoseconds\n",
+      "Average time taken for 5000 runs: 5833 nanoseconds\n"
      ]
     }
    ],
@@ -118,8 +122,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
-   "metadata": {},
+   "execution_count": 61,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -127,8 +135,8 @@
      "text": [
       "Sorted array:\n",
       "2 4 10 11 12 35 46 54 67 90 134 325 354 434 532 653 896 899 4579 \n",
-      "Time taken for one run: 4100 nanoseconds\n",
-      "Average time taken for 5000 runs: 3543 nanoseconds\n"
+      "Time taken for one run: 3200 nanoseconds\n",
+      "Average time taken for 5000 runs: 3685 nanoseconds\n"
      ]
     }
    ],
@@ -213,7 +221,11 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -304,8 +316,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
-   "metadata": {},
+   "execution_count": 99,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -313,8 +329,8 @@
      "text": [
       "Sorted array:\n",
       "12 34 43 123 132 164 234 234 323 466 725 \n",
-      "Time taken for one run: 3900 nanoseconds\n",
-      "Average time taken for 5000 runs: 3379 nanoseconds\n"
+      "Time taken for one run: 2600 nanoseconds\n",
+      "Average time taken for 5000 runs: 3363 nanoseconds\n"
      ]
     }
    ],
@@ -442,15 +458,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
-   "metadata": {},
+   "execution_count": 43,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hashmap look up time: 4800 nanoseconds\n",
-      "Binary search time: 9000 nanoseconds\n"
+      "Hashmap look up time: 4400 nanoseconds\n",
+      "Binary search time: 6400 nanoseconds\n"
      ]
     }
    ],
@@ -474,7 +494,7 @@
     "\n",
     "        // Measure the time it takes to look up the key '12' in the 'hashmap' using the 'lookUp' method,\n",
     "        // and print the time taken in nanoseconds.\n",
-    "        long lookUpTime = (lookUp(hashmap, 12));\n",
+    "        long lookUpTime = (lookUp(hashmap, 36));\n",
     "        System.out.println(\"Hashmap look up time: \" + lookUpTime + \" nanoseconds\");\n",
     "\n",
     "        // Measure the time it takes to search for the integer value '12' in the 'list' using a binary search algorithm\n",
@@ -544,7 +564,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "17.0.6+10-Ubuntu-0ubuntu120.04.1"
   },
